<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VerActivity">

    <TextView
        android:id="@+id/viewNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombre" />

    <EditText
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewNombre"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_apellidos" />

    <EditText
        android:id="@+id/txtApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewApellidos"
        android:inputType="textPersonName"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_edad" />

    <EditText
        android:id="@+id/txtEdad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewEdad"
        android:inputType="number"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_direccion" />

    <EditText
        android:id="@+id/txtDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/viewDireccion"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/viewPuestos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_puestos" />

    <EditText
        android:id="@+id/txtPuestos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:labelFor="@+id/viewPuestos"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnGuarda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#737373"
        android:text="@string/btn_guarda"
        android:textSize="24sp" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEditar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@drawable/ic_edit" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fabEliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:clickable="true"
        android:src="@drawable/ic_delete" />

</LinearLayout>